--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,3 +1,7 @@
+<% if @current_agent.has_role? 'admin' %>
+  <p style="visibility:hidden;"> <%= @current_member.id %> </p>
+<% end %>
+
 <div class="page-header">
   <%= render :partial => "shared/member_information" %>
 </div>
