refs #19053 - error messages moved to the top of the page. Alert message is shown only if member is created succesfully. tests not updated.

--- a/app/views/shared/_breadcrumb.html.erb
+++ b/app/views/shared/_breadcrumb.html.erb
@@ -22,6 +22,9 @@
       <% if params[:controller] == 'members' and params[:action] == 'index' %>
         <%= delimiter %><li class="active">Search</li>
       <% end %>
+      <% if params[:controller] == 'members' and params[:action] == 'new' %>
+        <%= delimiter %><li class="active">New member</li>
+      <% end %>
     <% end %>
 
     <% if @current_member %>
