--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -185,30 +185,7 @@
   </tbody>
 </table>
 
-
-<table id="table_pardot_sync" class="table table-bordered table-condensed">
-  <thead>
-    <tr class="box_title">
-      <th colspan="5"><h4>Pardot sync</h4></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th><%= t("activerecord.attributes.member.pardot_id") %></th>
-      <th><%= t("activerecord.attributes.member.pardot_synced_status") %></th>
-      <th><%= t("activerecord.attributes.member.pardot_last_synced_at") %></th>
-      <th><%= t("activerecord.attributes.member.pardot_last_sync_error") %></th>
-      <th><%= t("activerecord.attributes.member.pardot_last_sync_error_at") %></th>
-    </tr>
-    <tr>
-      <td><%= @current_member.pardot_id %></td>
-      <td><span class='label label-<%=t @current_member.pardot_synced_status, scope: 'activerecord.attributes.member.pardot_synced_status_priorities' -%>' id="span_mi_pardot_synced_status"><%=t @current_member.pardot_synced_status, scope: 'activerecord.attributes.member.pardot_synced_status_captions' -%></span></td>
-      <td><%= l(@current_member.pardot_last_synced_at, format: :dashed) if @current_member.pardot_last_synced_at %></td>
-      <td><%= @current_member.pardot_last_sync_error %></td>
-      <td><%= l(@current_member.pardot_last_sync_error_at, format: :dashed) if @current_member.pardot_last_sync_error_at %></td>
-    </tr>
-  </tbody>
-</table>
+<%= render :partial => 'pardot_sync' %>
 
 <table id="table_membership_information" class="table table-bordered table-condensed table-nohover">
   <thead>
